legacy/v1.1.0-beta/README.zh-CN.md
# B站屏蔽助手 · BiliTitleFilter

> B站视频标题屏蔽助手 —— 一个按标题屏蔽词过滤 B 站视频的浏览器扩展。

[![version](https://img.shields.io/badge/version-1.1.0--beta-orange)](https://github.com/ke25019/bili-title-filter/releases)
[![manifest](https://img.shields.io/badge/Manifest-V3-blue)]()
[![browser](https://img.shields.io/badge/Edge%20%7C%20Chrome-Chromium-00aeec)]()
[![tests](https://img.shields.io/badge/tests-118%20passed-brightgreen)]()

一个适用于 **Microsoft Edge / Chrome 等 Chromium 浏览器** 的 B 站网页端扩展（Manifest V3）。
按你自己添加的**视频标题屏蔽词**屏蔽视频：可以整体遮蔽（封面与标题合并成一块提示区域，鼠标悬停即可查看），
也可以直接隐藏；另外支持按分区屏蔽直播、番剧等推广内容，并提供可在页面内自由拖动的快捷面板。

---

## ⚠️ Beta 说明

当前版本为 **v1.1.0-beta**，功能完整可用，但仍处于测试阶段，欢迎反馈问题。

- 自动化校验：核心屏蔽逻辑 59 项、设置界面 41 项、后台服务 18 项，**共 118 项全部通过**。
- 已知限制：B 站页面结构改版后，个别卡片的识别可能需要调整（见文末「常见问题」）。
- 反馈渠道：请在 [Issues](https://github.com/ke25019/bili-title-filter/issues) 中提交，附上页面地址与截图更好定位。

---

## 功能一览

### 1. 标题屏蔽词屏蔽视频
- 支持批量添加 / 删除屏蔽词，多个屏蔽词之间是「或」的关系。
- 匹配规则可选：**区分大小写**、**正则表达式**、**同时匹配 UP 主名称**。
- 改动立即生效，所有已打开的 B 站页面自动重新扫描。

### 2. 两种屏蔽方式

| 方式 | 效果 |
| --- | --- |
| **整体遮蔽** | 把**封面 + 标题合成一整块区域**并显示「根据您的屏蔽词已将此视频屏蔽」，页面布局保持不变；**鼠标悬停时自动展示该视频**，移开鼠标自动恢复屏蔽。 |
| **完全隐藏** | 直接把视频卡片从页面上移除（`display:none`），**就像这个视频没有出现过一样**。 |

- 遮蔽文案可自定义（设置页 → 屏蔽方式 → 遮蔽区域文案）。
- 悬停自动展示可以关闭；关闭后遮蔽区域会拦截点击，避免误点进被屏蔽的视频。

### 3. 屏蔽分区推广（两个粒度，各自独立开关）

| 粒度 | 说明 |
| --- | --- |
| **卡片级** | 只屏蔽该分区的每一张卡片，页面其余部分照旧。 |
| **整行板块** | 把该分区所在的**整行推广板块**（含首页顶部轮播横幅、楼层区块及其标题）一起隐藏。 |

可屏蔽的分区：直播 · 番剧 · 影视 · 课堂/课程 · 专栏/图文 · 动态 · 漫画 · 活动话题推广位 · 商业广告。

**识别方式不依赖单一 class，B 站改版也不容易失效：**

1. 先看卡片内的链接指向哪里（`live.bilibili.com` / `/bangumi/play/` / `/cheese/play/` ……）
2. 再看卡片 class（使用了实测到的真实类名，如 `.bili-live-card`、`.feed-card`、`.anime-list-item`）
3. 若卡片本身不在已知列表里，就**从命中的链接向上自动推断卡片容器**
4. 顶栏导航区域（如「直播」「番剧」入口）会被明确排除，不会被误伤

### 4. 三处调节入口
- **扩展弹窗**：点击工具栏图标，快速开关与增删屏蔽词。
- **完整设置页**：分区屏蔽表格、效果预览、配置导入导出、统计与重置。
- **B 站页面内悬浮面板**：位于标题栏附近，**按住即可拖动**到任意位置，位置会自动记住（可一键重置），点一下展开设置面板。

### 5. 深色模式适配
- 遮蔽区域与页面内面板会自动跟随 B 站 web 端的深色模式。
- 检测方式：`<html>` 的 `dark` 属性 / `data-theme` / class，并以上下文背景色亮度作为兜底判断。
- 也可手动指定「始终浅色 / 始终深色」。

### 6. 其它
- 工具栏徽标显示今日屏蔽数量，累计 / 今日统计可在设置页查看与重置。
- 配置支持**导出 / 导入 JSON**，方便备份与多机同步。
- 设置存放在 `chrome.storage.sync`，登录浏览器账号时可跨设备同步。
- 注入的 UI 全部使用 **Shadow DOM + `bf-` 前缀类名**，不会污染或破坏 B 站自身样式。

---

## 安装方法（Microsoft Edge）

**方式一：下载压缩包（推荐）**

1. 打开 [Releases 页面](https://github.com/ke25019/bili-title-filter/releases)，下载最新版本的 `bili-title-filter-vX.Y.Z-beta.zip`。
2. 解压到任意目录（不要删除解压后的文件夹）。
3. 打开 Edge，地址栏输入 `edge://extensions/` 回车，打开左下角的 **「开发人员模式」**。
4. 点击 **「加载解压缩的扩展」**，选择解压出来的文件夹（含 `manifest.json` 的那一层）。

**方式二：克隆仓库**

```bash
git clone https://github.com/ke25019/bili-title-filter.git
```

然后按上面的第 3、4 步加载仓库目录。

> Chrome 用户同理：`chrome://extensions/` → 开发者模式 → 加载已解压的扩展程序。

---

## 使用说明

1. 点击浏览器工具栏的扩展图标，或点击 B 站页面标题栏附近的「屏蔽助手」按钮。
2. 在「标题屏蔽词」输入框中输入你想屏蔽的关键词（回车添加）。例如：
   - `剧透`
   - `营销号`
   - `标题党`
   - 开启正则后可使用 `^\s*【.*?】`、`(合集|盘点)\s*第?\d+` 等高级规则。
3. 在「屏蔽方式」中二选一：**整体遮蔽**（可悬停查看）或 **完全隐藏**。
4. 需要过滤分区推广时，在「屏蔽分区推广」中勾选分区；如果连整行推广板块也想去掉，打开下方的「**整行板块也一起屏蔽**」开关。
5. 悬浮按钮**按住可以拖到任意位置**，位置会自动保存；在面板底部点「重置位置」可回到默认停靠点。
6. 更多精细选项（每个分区单独控制卡片 / 整行、正则、UP 主匹配、文案自定义、导入导出、统计）在 **完整设置** 页中调整。

### 支持的页面
首页推荐、搜索页、分区页、排行榜、播放页右侧相关推荐、动态页等常见视频列表页。

---

## 目录结构

```
bili-title-filter/
├── manifest.json          # MV3 清单
├── background.js          # Service Worker：统计、徽标、默认值、打开设置页
├── shared/
│   └── defaults.js        # 共享默认配置 + 分区类型定义（含识别规则）
├── content/
│   ├── content.js         # 内容脚本：扫描/匹配/屏蔽 + 分区识别 + 可拖动悬浮面板
│   └── content.css        # 注入样式：遮蔽区域、悬停展示、板块隐藏、深色模式变量
├── popup/                 # 工具栏弹窗（快捷设置）
│   ├── popup.html / popup.css / popup.js
├── options/               # 完整设置页
│   ├── options.html / options.css / options.js
├── tests/                 # jsdom 自动化验证脚本（不参与扩展运行）
└── icons/                 # 16 / 32 / 48 / 128 图标
```

---

## 开发与自测

扩展本体零依赖，纯原生 JS（MV3 + Shadow DOM）。

```bash
cd tests
npm install      # 仅测试需要 jsdom
npm test         # 118 项行为校验
```

验证覆盖：屏蔽逻辑与两种屏蔽方式、悬停展示、分区卡片级 / 板块级识别、顶栏不误伤、
悬浮按钮拖动与位置记忆、弹窗 / 设置页交互、后台统计与徽标。详见 `tests/README.md`。

---

## 常见问题

**Q：勾选了某个分区，但页面上还有该分区的内容？**
A：分区屏蔽分两个粒度。「卡片级」只处理单张卡片；如果该内容是以整行板块 / 顶部轮播横幅的形式出现，需要把同一行的「**整行板块**」开关也打开。

**Q：屏蔽后页面出现空白 / 排版错乱？**
A：说明某个卡片的识别选择器需要更新（B 站改版所致）。可先切换为「整体遮蔽」模式，或到 `content/content.js` 的 `CARD_SELECTOR` / `TITLE_SELECTORS` 中补充新的类名。

**Q：为什么有的视频没被屏蔽？**
A：确认关键词是否被标题包含；若开启了「区分大小写」或「正则表达式」，匹配会更严格。也可打开设置页的「输出调试日志」，在 B 站页面的控制台查看命中情况。

**Q：会影响页面性能吗？**
A：扫描使用 `MutationObserver` + 180ms 防抖，只对「新增 / 被改动」的卡片做增量处理；通用分区识别与板块扫描仅在开启对应开关时才运行，并带有数量与频率上限。

**Q：统计数字比实际看到的屏蔽数量多？**
A：B 站是单页应用，列表滚动与切换会让卡片重新渲染，统计为「屏蔽次数」的近似值，仅作参考。

---

## 版本

**v1.1.0-beta** · 适用于 Microsoft Edge (Chromium) 102+（`minimum_chrome_version: 102`）

### 更新日志

**v1.1.0-beta**

- **修复：分区推广屏蔽无效**。改为不依赖单一 class 的通用识别（从卡片链接指向的站点反推类型），并补充 2025 年实测到的真实类名（`.bili-live-card`、`.feed-card`、`.anime-list-item` 等）
- **新增：分区屏蔽拆成两个粒度**——卡片级与整行板块级，各自独立开关；板块级可隐藏整行推广位、楼层标题与首页顶部轮播横幅
- **改进：整体遮蔽改为鼠标悬停自动展示**视频，移开鼠标自动恢复（可在设置中关闭）
- **新增：页面内悬浮按钮可自由拖动**，位置自动记忆，支持一键重置
- **修复：关闭屏蔽开关后，由通用识别找到的卡片无法恢复显示**的问题
- **修复：局部设置对象会把布尔项重置为 false** 的配置规范化缺陷（会导致悬浮按钮消失等异常）
- 新增 118 项自动化校验；中英文双语文档

**v1.0.0-beta.1**（首个公开测试版）

- 按标题屏蔽词屏蔽视频，支持批量管理、正则、区分大小写、UP 主名称匹配
- 两种屏蔽方式：整体遮蔽 / 完全隐藏
- 9 类分区推广屏蔽、页面内悬浮面板、深色模式适配、工具栏徽标统计

### 路线图

- [ ] 按 UP 主 / 播放量 / 时长 / 分区细分屏蔽
- [ ] 白名单与「始终显示」规则
- [ ] 屏蔽词分组与配置方案（Profile）切换
- [ ] 屏蔽日志面板（看看今天到底屏蔽了什么）

---

## 其它语言

- [English documentation](README.en.md)

---

## 授权

仓库目前未附带开源协议文件，作者保留所有权利。如需在其它项目中使用，请先通过 Issue 联系。
